# django-toots

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
config/: settings.py
django_toots/: admin.py  api.py  apps.py  decorators.py  exceptions.py  models.py
django_toots/migrations/: 0001_initial.py  0002_remove_mediafile_upload.py  0002_remove_tootfile_expires_at_and_more.py  0003_mediafileupload.py  0004_rename_mediafile_tweetfile_and_more.py  0005_alter_tweet_edit_history_tweet_ids_and_more.py  0006_tweetfile_delete_after_upload.py
tests/: admin.py  models.py  test_models.py
tests/management/commands/: create_tweets.py  publish_tweet.py  web_to_db.py
tests/migrations/: 0001_initial.py  0002_alter_djangonewsissue_date_and_more.py  0003_alter_djangonewsissue_date.py  0004_djangonewsissueitem.py  0005_djangonewsissue_issue_id.py  0006_djangonewsissue_issue_url.py  0007_remove_djangonewsissue_issue_url.py  0008_alter_djangonewsissue_date_and_more.py  0009_djangonewsissueitem_url_status_code.py  0010_alter_djangonewsissueitem_url.py
tests/samples/: credits
